--- a/in-browser-transpiling/package.json
+++ b/in-browser-transpiling/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.6.2",
+    "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "^0.8.27",
     "localforage": "^1.10.0",
     "monaco-editor": "^0.45.0",
