--- a/in-browser-transpiling/package.json
+++ b/in-browser-transpiling/package.json
@@ -12,10 +12,10 @@
     "@types/prettier": "^2.7.3",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@types/react-redux": "7.1.33",
+    "@types/react-redux": "7.1.15",
     "@types/react-resizable": "3.0.2",
     "@uiw/react-md-editor": "^2.1.1",
-    "axios": "^1.6.2",
+    "axios": "0.21.1",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "^0.8.27",
     "localforage": "^1.10.0",
@@ -23,11 +23,11 @@
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "9.1.0",
+    "react-redux": "7.2.2",
     "react-resizable": "3.0.4",
     "react-scripts": "5.0.1",
-    "redux": "5.0.1",
-    "redux-thunk": "3.1.0",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
